<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="10dp"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <com.taipeitech.MenuSpinner
            android:id="@+id/year_list"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:prompt="@string/year"
            android:spinnerMode="dialog"/>

        <com.taipeitech.MenuSpinner
            android:id="@+id/division_list"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:prompt="@string/division"
            android:spinnerMode="dialog"/>
    </LinearLayout>

    <com.taipeitech.MenuSpinner
        android:id="@+id/department_list"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:prompt="@string/department"
        android:spinnerMode="dialog"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"></LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>